--- a/rickandmorty/pom.xml
+++ b/rickandmorty/pom.xml
@@ -17,13 +17,13 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-
+<!-- 
 		<dependency>
 			<groupId>com.mydataharbor</groupId>
 			<artifactId>jdbc-postgresql-plugin</artifactId>
 			<version>2.0.2</version>
 			<type>pom</type>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
